fix white spacing by right side of website

--- a/frontend/src/app/contact-section/contact-section.component.scss
+++ b/frontend/src/app/contact-section/contact-section.component.scss
@@ -5,6 +5,8 @@
   max-width: 1200px;
   height: 500px;
   position: relative;
+  width: 100%;
+  margin: 0 auto;
   .row {
     display: flex;
     justify-content: center;
