--- a/frontend/src/app/offer/offer.component.scss
+++ b/frontend/src/app/offer/offer.component.scss
@@ -3,7 +3,7 @@
 .container-fluid1 {
   max-width: 1200px;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 0 auto 80px auto;
   // width: 100%;
   height: auto;
   margin-top: 80px;
@@ -12,8 +12,7 @@
     letter-spacing: -7px;
     margin-bottom: 30px;
     text-indent: -3px;
-    margin-left: -6px;
-    padding: 20px 0px 10px 0px;
+    padding: 30px 0px 10px 0px;
     letter-spacing: -3px;
     line-height: 85px;
     font-size: 100px;
