--- a/frontend/src/app/skills-section/skills-section.component.scss
+++ b/frontend/src/app/skills-section/skills-section.component.scss
@@ -12,11 +12,10 @@
   max-width: 1200px;
   margin: 0 auto;
   height: auto;
-  // padding: 0 80px;
   .skills-header {
-    // width: 100%;
     font-family: "Stolzl";
     margin-bottom: 40px;
+    margin-top: 100px;
     padding: 0;
     transition: 2s ease;
   }
